Exercises/Intro/final-exercise/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: wordpress
spec:
  selector:
    app: mysql
  type: ClusterIP
  ports:
  - name: mysql-service
    protocol: TCP
    port: 3306
    targetPort: 3306
