Exercises/Intro/final-exercise/wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
  namespace: wordpress
spec:
  selector:
    app: wordpress
  type: ClusterIP
  ports:
  - name: wordpress-service
    protocol: TCP
    port: 80
    targetPort: 80
